add second block div

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Тестовый проект</h1>
     <h2>Проба пера</h2>
     <div>Блочный объект</div>
+    <div>Второй блочный элемент</div>
 </body>
 </html>
