--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Тестовый проект</h1>
     <h2>Проба пера</h2>
-    <div>Блочный объект</div>
+    <div>Блочный элемент</div>
     <div>Второй блочный элемент</div>
 </body>
 </html>
