--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h2>Проба пера</h2>
     <div>Блочный элемент</div>
     <div>Второй блочный элемент</div>
+    <div>Третий блочный элемент</div>
 </body>
 </html>
